<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_new_game_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seniordesign.wolfpack.quizinator.activities.NewGameSettingsActivity">

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/ruleset_row"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/select_ruleset"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half" />
            <Spinner
                android:id="@+id/ruleset_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/deck_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/select_deck"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half" />
            <Spinner
                android:id="@+id/deck_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half">
            <TextView
                android:id="@+id/game_label"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:text="@string/game_time"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_column="1"
                android:paddingStart="@dimen/spinner_padding"
                android:paddingLeft="@dimen/spinner_padding"
                android:paddingEnd="@dimen/spinner_padding"
                android:paddingRight="@dimen/spinner_padding">
                <EditText
                    android:id="@+id/game_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@string/min"/>
                <TextView
                    android:id="@+id/game_semicolon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semicolon"/>
                <EditText
                    android:id="@+id/game_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@string/no_time"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/card_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/card_time"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_column="1"
                android:paddingStart="@dimen/spinner_padding"
                android:paddingLeft="@dimen/spinner_padding"
                android:paddingEnd="@dimen/spinner_padding"
                android:paddingRight="@dimen/spinner_padding">
                <EditText
                    android:id="@+id/card_minutes"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_time"/>
                <TextView
                    android:id="@+id/card_semicolon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semicolon"/>
                <EditText
                    android:id="@+id/card_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@string/default_secs"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/card_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_type"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half"/>
            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                android:id="@+id/card_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half">
            <TextView
                android:id="@+id/card_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_count"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half"/>
            <EditText
                android:id="@+id/card_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:layout_marginStart="@dimen/spinner_padding"
                android:layout_marginLeft="@dimen/spinner_padding"
                android:layout_marginEnd="@dimen/spinner_padding"
                android:layout_marginRight="@dimen/spinner_padding"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:id="@+id/allow_multiple_winners_row"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half">
            <CheckBox
                android:id="@+id/allow_multiple_winners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/allow_multiple_winners"
                android:textColor="?android:attr/textColorTertiary" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:id="@+id/double_edge_questions_row"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half">
            <CheckBox
                android:id="@+id/include_double_edge_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/double_edge_sword_questions"
                android:textColor="?android:attr/textColorTertiary" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:id="@+id/final_wager_question_row"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half">
            <CheckBox
                android:id="@+id/include_final_wager_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/wager_final_question"
                android:textColor="?android:attr/textColorTertiary" />
        </TableRow>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/card_count_solo_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solo_play_card_count_warning"
                android:textSize="@dimen/md_text_size_caption"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />
        </LinearLayout>

    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        app:srcCompat="@drawable/ic_play_button_24dp"
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:onClick="startGame" />

</RelativeLayout>