...
    <string name="app_name">Quizinator</string>

    <string name="game_time">Game Time</string>
    <string name="card_type">Card Type(s)</string>
    <string name="semicolon">:</string>
    <string name="start_game">Start Game</string>
    <string name="no_time">00</string>
    <string name="min">05</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="quiz_bowl_rules">Quiz Bowl Rules</string>
    <string name="card_count">Card Count</string>
    <string name="card_time">Card Time</string>
    <string name="default_secs">15</string>

    <string name="new_game">New Game</string>
    <string name="solo_game">Solo Game</string>
    <string name="join_game">Join Game</string>
    <string name="host_game">Host Game</string>
    <string name="highscores">High Scores</string>
...
